.vim/compiler/pyqf-run
#!/usr/bin/env bash

file="$1"

# Check argument provided
if [[ -z "$file" ]]; then
  echo "Error: no file provided" >&2
  exit 1
fi

# Check file exists
if [[ ! -e "$file" ]]; then
  echo "Error: file does not exist: $file" >&2
  exit 1
fi

# Check it's a regular file
if [[ ! -f "$file" ]]; then
  echo "Error: not a regular file: $file" >&2
  exit 1
fi

# Check executable permission
if [[ ! -x "$file" ]]; then
  echo "Error: file is not executable: $file" >&2
  exit 1
fi

pytrace2qf()
{
	local file lnum msg
	while IFS= read -r line; do
		[[ -z "$file" ]] && file=$(sed -nE 's/.*File "(.*)", line [0-9]*.*/\1/p' <<<"$line")
		[[ -z "$lnum" ]] && lnum=$(sed -nE 's/.*File ".*", line ([0-9]*).*/\1/p' <<<"$line")
		[[ -z "$msg" ]]  && msg=$(sed -nE 's/(.*Error: .*)/\1/p' <<<"$line")
	done
	printf "%s:%s: %s\n" "$file" "$lnum" "$msg"
}

_test()
{
	cat <<-EOF

		 File "lab/bookbot/./main.py", line 30
		    print(af"--- Begin report of {book_path} ---")
		            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
		SyntaxError: invalid syntax
	EOF

}
# _test | pytrace2qf


# Run it and normalize output
output=$("$file" 2>&1)
rc=$?

if (( rc != 0 )); then
	echo "$output" | pytrace2qf
	exit "$rc"
else
	echo "$output"
fi

